# venmo-domain

./: .gitignore  Makefile  pyproject.toml
docs/: .gitignore  Makefile  adr.rst  changelog.rst  conf.py  decimal_type.rst  dependencies.rst  example.py  index.rst  requirements_dev_licenses.rst  requirements_licenses.rst
venmo_domain/: __init__.py  domain.py  errors.py  ports.py  types.py
venmo_domain/app/: __init__.py  ports.py
venmo_domain/tests/: booking_spec.py  social_spec.py  subaccount_spec.py  user_spec.py  wallet_spec.py
venmo_domain/tests/unit/: accounting_resource.py  booking_test.py  social_resource.py  social_test.py  subaccount_test.py  user_resource.py  user_test.py  venmo_test.py  wallet_test.py
